--- a/portfolio.html
+++ b/portfolio.html
@@ -7,44 +7,42 @@
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="page-header">
-        <nav class="site-nav">
-            <a class="logo" lang="en" href="#">
+    <header class="header">
+        <nav class="nav">
+            <a class="header-logo" lang="en" href="#">
                 <span class="logo-part" lang="en">Web</span>Studio
             </a>
-            <ul class="list">
-                <li class="item">
-                    <a class="link" href="./index.html">
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">
                         Студия
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link current" href="./portfolio.html">
+                <li class="nav-item"-nav>
+                    <a class="nav-link current" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="#">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
                         Контакты
                     </a>
                 </li>
             </ul>
         </nav>
-        <ul class="contacts list">
-            <li class="item">
-                <a class="link contact" href="mailto:info@devstudio.com">
+        <ul class="header-contacts list">
+            <li class="header-contacts-item">
+                <a class="header-contacts-link contact" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
-            <li class="item">
-                <a class="link contact" href="tel:+380961111111">
+            <li class="header-contacts-item">
+                <a class="header-contacts-link contact" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
             </li>
@@ -52,120 +50,120 @@
     </header>
     <main>
         <section class="catalog">
-            <h1 class="section-title" lang="en">
+            <h1 hidden class="catalog-title section-title" lang="en">
                 Catalog
             </h1>
-            <ul class="menu-list list">
-                <li class="item">
-                    <button type="button" class="btn">
+            <ul class="filter-list list">
+                <li class="filter-item">
+                    <button type="button" class="filter-btn btn-current">
                         Все
                     </button>
                 </li>
-                <li class="item">
-                    <button type="button" class="btn">
+                <li class="filter-item">
+                    <button type="button" class="filter-btn">
                         Веб-сайты
                     </button>
-                <li class="item">
-                    <button type="button" class="btn">
+                <li class="filter-item">
+                    <button type="button" class="filter-btn">
                         Приложения
                     </button>
                 </li>
-                <li class="item">
-                    <button type="button" class="btn">
+                <li class="filter-item">
+                    <button type="button" class="filter-btn">
                         Дизайн
                     </button>
                 </li>
-                <li class="item">
-                    <button type="button" class="btn">
+                <li class="filter-item">
+                    <button type="button" class="filter-btn">
                         Маркетинг
                     </button>
                 </li>
             </ul>
-            <ul class="catalog-list list">
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370">
-                        <h2 class="title">Технокряк</h2>
-                        <p class="inform">Веб-сайт</p>
+            <ul class="portfolio-list list">
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="">
+                        <img class="portfolio-img" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370">
+                        <h2 class="portfolio-title">Технокряк</h2>
+                        <p class="portfolio-info">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370">
-                        <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                        <p class="inform">Дизайн</p>
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="">
+                        <img class="portfolio-img" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370">
+                        <h2 class="portfolio-subtitle">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                        <p class="portfolio-info">Дизайн</p>
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370">
-                        <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-                        <p class="inform">Приложение</p>
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="">
+                        <img class="portfolio-img" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370">
+                        <h2 class="portfolio-subtitle">Ресторан <span lang="en">Seafood</span></h2>
+                        <p class="portfolio-info">Приложение</p>
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370">
-                        <h2 class="title">Проект <span lang="en">Prime</span></h2>
-                        <p class="inform">Маркетинг</p>
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="">
+                        <img class="portfolio-img" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370">
+                        <h2 class="portfolio-subtitle">Проект <span lang="en">Prime</span></h2>
+                        <p class="portfolio-inform">Маркетинг</p>
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370">
-                        <h2 class="title">Проект<span lang="en">Boxes</span></h2>
-                        <p class="inform">Приложение</p>
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="">
+                        <img class="portfolio-img" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370">
+                        <h2 class="portfolio-subtitle">Проект<span lang="en">Boxes</span></h2>
+                        <p class="portfolio-info">Приложение</p>
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370">
-                        <h2 class="title" lang="en">Inspiration has no Borders</h2>
-                        <p class="inform">Веб-сайт</p>
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="">
+                        <img class="portfolio-img" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370">
+                        <h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
+                        <p class="portfolio-info">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370">
-                        <h2 class="title">Издание<span lang="en">Limited Edition</span></h2>
-                        <p class="inform">Дизайн</p>
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="">
+                        <img class="portfolio-img" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370">
+                        <h2 class="portfolio-subtitle">Издание<span lang="en">Limited Edition</span></h2>
+                        <p class="portfolio-inform">Дизайн</p>
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370">
-                        <h2 class="title">Проект<span lang="en">LAB</span></h2>
-                        <p class="inform">Маркетинг</p>
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="">
+                        <img class="portfolio-img" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370">
+                        <h2 class="portfolio-subtitle">Проект<span lang="en">LAB</span></h2>
+                        <p class="portfolio-info">Маркетинг</p>
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370">
-                        <h2 class="title" lang="en">Growing Business</h2>
-                        <p class="inform">Приложение</p>
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="">
+                        <img class="portfolio-img" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370">
+                        <h2 class="portfolio-subtitle" lang="en">Growing Business</h2>
+                        <p class="portfolio-info">Приложение</p>
                     </a>
                 </li>
             </ul>
         </section>
     </main>
-    <footer class="page-footer">
-        <a class="logo" lang="en" href="#">
-            <span class="logo-part" lang="en">Web</span>Studio
+    <footer class="footer">
+        <a class="-footer-logo" lang="en" href="#">
+            <span class="footer-logo-part logo-part" lang="en">Web</span>Studio
         </a>
-        <address>
-            <ul class="address list">
-                <li class="item">
-                    <a class="link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+        <address class="footer-address">
+            <ul class="address-list list">
+                <li class="address-item">
+                    <a class="address-link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link contact" href="mailto:info@devstudio.com">
+                <li class="address-item">
+                    <a class="address-link contact" href="mailto:info@devstudio.com">
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link contact" href="tel:+380961111111">
+                <li class="address-item">
+                    <a class="address-link contact" href="tel:+380961111111">
                         +38 096 111 11 11
                     </a>
                 </li>
