--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
             <a class="header-logo" lang="en" href="#">
                 <span class="logo-part" lang="en">Web</span>Studio
             </a>
-            <ul class="nav-list">
+            <ul class="nav-list list">
                 <li class="nav-item">
                     <a class="nav-link" href="./index.html">
                         Студия
@@ -147,13 +147,13 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="-footer-logo" lang="en" href="#">
+        <a class="footer-logo" lang="en" href="#">
             <span class="footer-logo-part logo-part" lang="en">Web</span>Studio
         </a>
         <address class="footer-address">
             <ul class="address-list list">
                 <li class="address-item">
-                    <a class="address-link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+                    <a class="address-link map" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
