--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a class="logo header-logo" lang="en" href="#">
+            <a class="header-logo" lang="en" href="#">
                 <span class="header-logo-part logo-part" lang="en">Web</span>Studio
             </a>
-            <ul class="nav-list">
+            <ul class="nav-list list">
                 <li class="nav-item">
                     <a class="nav-link current" href="./index.html">
                         Студия
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class=navr-link" href="./portfolio.html">
+                    <a class="nav-link" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
@@ -61,7 +61,7 @@
             <h2 hidden class="benefits-title section-title" lang="en">
                 Feature
             </h2>
-            <ul class="benefits-list">
+            <ul class="benefits-list list">
                 <li>
                     <h3 class="benefits-subtitle">
                         Внимание к деталям
@@ -100,7 +100,7 @@
             <h2 class="developments-title section-title">
                 Чем мы занимаемся
             </h2>
-            <ul class="developments-list">
+            <ul class="developments-list list">
                 <li class="developments-item">
                     <img class="developments-img" src="./images/what-we-do1.jpg" alt="написание_программы" width="370">
                 </li>
@@ -116,7 +116,7 @@
             <h2 class="team-title section-title">
                 Наша команда
             </h2>
-            <ul class="team-list">
+            <ul class="team-list list">
                 <li class="team-item">
                     <img src="./images/team_card_1.jpg" alt="Игорь" width="270">
                     <h3 class="team-name">
@@ -157,13 +157,13 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="-footer-logo" lang="en" href="#">
+        <a class="footer-logo" lang="en" href="#">
             <span class="footer-logo-part logo-part" lang="en">Web</span>Studio
         </a>
         <address class="footer-address">
             <ul class="address-list list">
                 <li class="address-item">
-                    <a class="address-link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+                    <a class="address-link map" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
